# asibot-openrave-models

./: CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/template/: ASIBOT_OPENRAVE_MODELSConfig.cmake.in  AsibotOpenRAVEModelsConfigUninstall.cmake.in
doc/: asibot-openrave-models-install.md  asibot_openrave_models_install.md
openrave/: CMakeLists.txt
openrave/models/: README.md  asibot.kinbody.xml  asibotLW.kinbody.xml  ipcamCart.kinbody.xml  ipcamCart2.kinbody.xml  ipcamCart3.kinbody.xml
